--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-    font-family: 'Poppins', sans-serif;
+    font-family: 'Poppins', system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 @font-face {
     font-family: Norse;
@@ -12,6 +12,7 @@
 :root{
     --primary-color: #ff5454;
     --focus-border: rgb(0, 68, 255);
+    --shadow-color: #b9b9b9;
 }
 .container{
     height: 100vh;
@@ -56,25 +57,25 @@
     font-size: 1.2rem;
     font-weight: 500;
     padding-bottom: 25px;
-    transition: 0.3s;
+    transition: 0.4s;
 }
 .form-container h3{
     font-size: 1.2rem;
     font-weight: 500;
     padding-bottom: 50px;
-    transition: 0.3s;
+    transition: 0.4s;
 }
 .form-container .lets-do-this{
     padding-bottom: 15px;
 }
 .form-content{
     padding-bottom: 10px;
-    box-shadow: 0 4px 5px -2px #b9b9b9;
+    box-shadow: 0 4px 5px -2px var(--shadow-color);
 }
 .row1{
     display: flex;
     gap: 30px;
-    transition: 0.3s;
+    transition: 0.4s;
 }
 .form-input{
     width: 100%;
@@ -91,7 +92,8 @@ input{
 input:focus{
     border: 1px solid var(--focus-border);
 }
-input[type="email"]:invalid{
+input[type="email"]:invalid,
+input[type="tel"]:invalid{
     border: 1px solid red;
 }
 input[type="submit"]{
@@ -102,7 +104,7 @@ input[type="submit"]{
     color: white;
     cursor: pointer;
     font-size: 1rem;
-    transition: 0.3s;
+    transition: 0.4s;
 }
 input[type="submit"]:focus{
     transform: scale(1.08);
@@ -116,7 +118,7 @@ p.have-account{
     padding-top: 20px;
     font-size: 1rem;
     font-weight: 400;
-    transition: 0.3s;
+    transition: 0.4s;
 }
 
 .have-account a{
@@ -124,7 +126,11 @@ p.have-account{
     color: var(--primary-color);
     font-weight: 500;
 }
-
+.error{
+    font-size: .9rem;
+    color: red;
+    
+}
 @media (max-width: 700px){
     .img-container{
         display: none;
